# io-imap

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  flake.nix  shell.nix
docs/: README.md
examples/: append.rs  capability.rs  condstore.rs  fetch.rs  greeting.rs  idle.rs  login.rs  plain.rs  select.rs  starttls.rs  std_client_full.rs  std_client_light.rs  std_coroutine.rs  tokio_coroutine.rs
src/: client.rs  context.rs  coroutine.rs  lib.rs  send.rs  watch.rs
src/client/: mod.rs  tokio.rs
src/rfc2177/: idle.rs  mod.rs
src/rfc2971/: id.rs  mod.rs
src/rfc3501/: append.rs  append_stream.rs  capability.rs  check.rs  close.rs  copy.rs  create.rs  delete.rs  examine.rs  expunge.rs  fetch.rs  fetch_stream.rs  greeting-with-capability.rs  greeting.rs  list.rs  login.rs  logout.rs  lsub.rs  mailbox.rs  mod.rs  noop.rs  raw.rs  rename.rs  search.rs  select.rs  starttls.rs  status.rs  store.rs  subscribe.rs  unsubscribe.rs
src/rfc3691/: mod.rs  unselect.rs
src/rfc4315/: appenduid.rs  mod.rs
src/rfc5161/: enable.rs  mod.rs
src/rfc5256/: mod.rs  sort.rs  thread.rs
src/rfc6851/: mod.rs  move.rs
src/rfc7162/: examine.rs  fetch.rs  mod.rs  select.rs
src/rfc7628/: auth-oauthbearer.rs  auth-xoauth2.rs  auth_oauthbearer.rs  mod.rs
src/rfc7677/: auth-scram-sha-256.rs  auth_scram_sha_256.rs  mod.rs
src/sasl/: auth-anonymous.rs  auth-login.rs  auth-plain.rs  auth_anonymous.rs  auth_login.rs  auth_plain.rs  auth_xoauth2.rs  mod.rs
src/tasks/tasks/: fetch.rs  search.rs  select.rs
tests/: common.rs  fastmail.rs  gmail.rs  rfc3501.rs  stalwart.rs  stalwart.sh
