[package]
name = "io-imap"
description = "IMAP client library"
version = "0.0.1"
authors = ["soywod <pimalaya.org@posteo.net>"]
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
categories = ["email", "no-std"]
keywords = ["email", "imap", "client", "std", "io-free"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-imap/latest/io_imap"
repository = "https://github.com/pimalaya/io-imap"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
client = []
scram = ["dep:hmac", "dep:pbkdf2", "dep:rand", "dep:sha2"]
rustls-ring = ["client", "pimalaya-stream/rustls-ring", "dep:anyhow", "dep:url"]
rustls-aws = ["client", "pimalaya-stream/rustls-aws", "dep:anyhow", "dep:url"]
native-tls = ["client", "pimalaya-stream/native-tls", "dep:anyhow", "dep:url"]
vendored = ["pimalaya-stream?/vendored"]

[dev-dependencies]
ctrlc = "3.5"
env_logger = "0.11"

[dependencies]
anyhow = { version = "1", optional = true }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
hmac = { version = "0.12", optional = true }
imap-codec = { version = "2.0.0-alpha.7", features = ["ext_condstore_qresync", "ext_id", "ext_login_referrals", "ext_mailbox_referrals", "ext_metadata", "ext_namespace", "ext_utf8", "quirk", "quirk_crlf_relaxed", "quirk_id_empty_to_nil", "starttls", "tag_generator"] }
log = "0.4"
pbkdf2 = { version = "0.12", optional = true }
pimalaya-stream = { version = "0.0.1", default-features = false, optional = true }
rand = { version = "0.8", optional = true }
secrecy = { version = "0.10", default-features = false }
sha2 = { version = "0.10", optional = true }
thiserror = { version = "2", default-features = false }
url = { version = "2.2", default-features = false, optional = true }

# [patch.crates-io]
# pimalaya-stream.path = "../stream"

[patch.crates-io]
pimalaya-stream.git = "https://github.com/pimalaya/stream"
